Line height too big on admin toggle  Fixes #1290

--- a/components/switch/index.less
+++ b/components/switch/index.less
@@ -1,5 +1,4 @@
 #switch {
-    @border-radius: 30px;
     @height: 50px;
     width: 100%;
     user-select:none;
@@ -19,39 +18,36 @@
         position: relative;
         padding: 0;
         margin-bottom: 0;
+    }
 
-        .options {
-            display: block;
-            width: 100%;
-            height: 100%;
-            margin-left: 0;
+    .options {
+        align-items: center;
+        display: flex;
+        width: 100%;
+        min-height: @height;
+        margin-left: 0;
+    }
 
-            span {
-                display: block;
-                float: left;
-                width: 50%;
-                height: 100%;
-                padding: 0;
-                line-height: @height;
-                color: @white;
-                text-align: center;
-                position: relative;
-                z-index: 2;
-                color: @darkHighlight;
-            }
-        }
+    span {
+        display: block;
+        width: 50%;
+        padding: 0 5px;
+        text-align: center;
+        position: relative;
+        z-index: 2;
+        color: @darkHighlight;
+    }
 
-        .indicator {
-            display: block;
-            width: 50%;
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0%;
-            z-index: 1;
-            transition: transform 0.3s ease-out;
-            border-bottom: 6px solid @darkHighlight;
-        }
+    .indicator {
+        display: block;
+        width: 50%;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0%;
+        z-index: 1;
+        transition: transform 0.3s ease-out;
+        border-bottom: 6px solid @darkHighlight;
     }
 
     input[type=checkbox]:checked + label > .indicator {
